use scoped package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omit",
+  "name": "@micro-js/omit",
   "description": "Simple, tiny object omit utility",
   "repository": "git://github.com/micro-js/omit.git",
   "version": "0.0.1",
