--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@micro-js/omit",
+  "name": "@f/omit",
   "description": "Simple, tiny object omit utility",
   "repository": "git://github.com/micro-js/omit.git",
   "version": "2.0.0",
@@ -9,7 +9,7 @@
     "postversion": "git push && git push --tags && npm publish --access=public"
   },
   "dependencies": {
-    "@micro-js/foreach": "^1.0.0"
+    "@f/foreach": "^1.0.0"
   },
   "devDependencies": {
     "tape": "^4.2.2"
